# ChronicleFS Cargo.toml (Rust 2024 Edition)
# This file defines project metadata and dependencies.
# Edition has been upgraded to 2024 for modern Rust features.

[package]
name = "chroniclefs"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"

[dependencies]
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
lz4 = "1.24.0"
aes-gcm = "0.10"
rand = "0.8"
